Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#686 closed bug (fixed)

WindowLayer::IsNormal() crash

Reported by: johndrinkwater Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description

app_server crashes in WindowLayer::IsNormal() with a Bad thread ID

Steps to reproduce: 1, load MrPeeps, and close it 2, load MrPeeps, and app_server should jump to fullscreen debug

It happens irregularly, so try to start MrPeeps again if it doesn't happen.

Change History (11)

comment:1 by johndrinkwater, 19 years ago

Note: this happens more often when you do not have people in your ~/people/ dir

comment:2 by diver, 19 years ago

Cc: diver added

comment:3 by diver, 19 years ago

Could this be somewhat connected to #653 ?

comment:4 by axeld, 19 years ago

Status: newclosed

comment:5 by axeld, 19 years ago

Resolution: fixed

comment:6 by axeld, 19 years ago

Thanks, I could reproduce this very well. Fixed in hrev17878.

comment:7 by johndrinkwater, 19 years ago

Diver, I hadn't found your bug on search because this was bad thread id, and not a segment violation, but maybe the same - the backtrace is nearly identical (with the exception of an additional Desktop::ActivateWindow), so it's possible. Best to retest.

comment:8 by axeld, 19 years ago

John, I'm afraid you're wrong here: "Bad thread ID" just means that GDB had some problems, the fault itself was a segment violation. "Bad thread ID" is just a standard error code.

comment:9 by diver, 19 years ago

blocked: 653

comment:10 by johndrinkwater, 19 years ago

Fair enough Axel (thankyou!), i'm still learning :) Does GDB lose all sense that it is a segment violation then? (will retest in a min)

comment:11 by axeld, 19 years ago

I don't know, it could be that it doesn't see the actual cause in this case, you'd have to ask Ingo if you want to know more :-)

Note: See TracTickets for help on using tickets.