Fixed a big race condition in the server code: * ServerApp was accessing ServerWindow::Window() (while having the app window   lock held), but in fact, there was no guarantee it already existed, or was   added to the Desktop. * Therefore, the Window() semantics have changed to only return a window in   case the window exists *and* has been added to the desktop (the latter   constraint might be lifted again, though). Therefore, it doesn't work   for offscreen windows, and should not be used within ServerWindow code   anymore. * This fixes bug #686 and maybe others as well.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17878 a95241bf-73f2-0310-859d-f6bbb57e9c96